将内建变量合并到变量的整体测试

--- a/ansible/simple/var_test.yml
+++ b/ansible/simple/var_test.yml
@@ -28,3 +28,5 @@
       debug: msg="register variable(info) is {{ info['stdout'] }}"
     - name: display long var
       debug: msg="{{ longvar }}"
+    - name: test buildin variable
+      template: src=files/jinja.j2 dest=/tmp/cpis
