--- a/ansible/playbook/kubernetes/roles/master/tasks/main.yml
+++ b/ansible/playbook/kubernetes/roles/master/tasks/main.yml
@@ -7,6 +7,14 @@
     - config
   notify:
     - restart master service
+
+- name: add api token
+  shell: openssl genrsa -out /tmp/serviceaccount.key 2048
+- name: update apiserver
+  lineinfile: path=/etc/kubernetes/apiserver regexp="^KUBE_API_ARGS" line="KUBE_API_ARGS=\"--service_account_key_file=/tmp/serviceaccount.key\""
+- name: update controller-manager
+  lineinfile: path=/etc/kubernetes/controller-manager regexp="^KUBE_CONTROLLER_MANAGER_ARGS" line="KUBE_CONTROLLER_MANAGER_ARGS=\"--service_account_private_key_file=/tmp/serviceaccount.key\""
+
 - name: start and enable master service
   service: name={{ item }} state=started enabled=yes
   with_items:
