--- a/ansible/playbook/wordpress-nginx/roles/wordpress/tasks/main.yml
+++ b/ansible/playbook/wordpress-nginx/roles/wordpress/tasks/main.yml
@@ -20,7 +20,7 @@
   mysql_db: name={{ wp_db_name }} state=present
 
 - name: Create WordPress database user
-  mysql_user: name={{ wp_db_name }}  password={{ wp_db_password }} priv={{ wp_db_name }}.*:ALL host='localhost' state=present
+  mysql_user: name={{ wp_db_name }}  password={{ wp_db_password }} priv={{ wp_db_name }}.*:ALL host='%' state=present
 
 - name: Copy WordPress config file
   template: src=wp-config.php dest=/srv/wordpress/
